# Sabina-patrick

./: .directory  CMakeLists.txt  ConfigFile.cpp  LICENSE  README.md  Sabina.kdev4  Triplet.h  main.cpp  main_doc.h  sample_run.h
Face/: DDS.cpp  DDS.h  FFT.cpp  FFT.h  Face.h  Mathlib.h  Mathlib.inl  Md3Model.cpp  Md3Model.h  NoiseRemoval.cpp  NoiseRemoval.h  PNG.cpp  PNG.h  TGA.cpp  TGA.h  Texture_Manager.cpp  Texture_Manager.h  gui.cpp  main.cpp  model_3ds.cpp  model_3ds.h  vector3d.cpp  vector3d.h  view2d.cpp  view2d.h
Follower/: CMakeLists.txt  main.cpp
Gestos/: CMakeLists.txt  NiHandTracker.cpp  NiHandViewer.cpp  NiSimpleViewer.cpp  main.cpp
Gestures/: CMakeLists.txt  dynamic_win.cpp  dynamic_win.h  hmm.cpp  hmm.h  main.cpp  observations.cpp  observations.h
Gui/: .directory  CMakeLists.txt  button.cpp  button.h  console.cpp  console.h  gui.cpp  gui.h  input_singleton.cpp  input_singleton.h  kinect.cpp  kinect.h  tab.cpp  tab.h  textbox.cpp  textbox.h  video.cpp  video.h  view2d.cpp  view2d.h  widget.cpp  widget.h
Human/: CMakeLists.txt  ConfigFile.h  Human.cpp  Human.h  joint.cpp  joint.h
Humo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  humo  main.cpp
Kinect/: CMakeLists.txt  Ni_Device.cpp  Ni_Device.h  main.cpp
Localization/: CMakeLists.txt  main.cpp
MDP/: MDP.h  cudd.h  main.cpp  mdpparser.tab.h  pair.h  pspudd_pat.hh  util.h
Manipulacion/: CMakeLists.txt  armkatana.cpp  armkatana.h  armkatanaforsabina.cpp  armkatanaforsabina.h  kintoarmtransf.cpp  kintoarmtransf.h  main.cpp  mainpulacion.cpp  manipulacion.h
Manipulacion/bckup/: CMakeLists.txt  armkatana.cpp  armkatana.h  armkatanaforsabina.cpp  armkatanaforsabina.h  main.cpp  mainpulacion.cpp  manipulacion.h
Mapping/: CMakeLists.txt  GENRawICP.ini  Makefile  RawlogICPOnline  RawlogICPOnline.cpp  cmake_install.cmake  icp-slam_demo_classic_gridmatch.ini  main.cpp  my_dataset.rawlog
Navegacion/: ArActionGoToSabina.cpp  CMakeLists.txt  Controller.cpp  Controller.h  main.cpp  navegacion.cpp
Navegacion_Restaurant/: ArActionGoToSabina.h  CMakeLists.txt  Controller.cpp  Controller.h  main.cpp  navegacion.cpp
Navegation/: ArActionGoToSabina.cpp  CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
Navegation_Planing/: CAmbiente.cpp  CAmbiente.h  CGraph.cpp  CGraph.h  CLocal.cpp  CLocal.h  CMakeLists.txt  CNearNode.cpp  CNearNode.h  CPersonajeConfig.cpp  CPersonajeConfig.h  CProbot.cpp  CProbot.h  CSampler.cpp  CSampler.h  CSamples.cpp  CSamples.h  Constants.h  PlanningParameters.cpp  PlanningParameters.h  Random.cpp  Random.h  TiposBasicos.cpp  TiposBasicos.h  Workspace.cpp  Workspace.h  main.cpp  navigation_planing.cpp  read_prm.cpp  read_prm.h  uu_Utils.h
Navegation_Restaurant/: ArActionGoToSabina.cpp  ArActionGoToSabina.h  CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
Navigation_Client/: CMakeLists.txt  main.cpp
Net_client/: CMakeLists.txt  Net.h  NetThread.cpp  NetThread.h  main.cpp
Net_server/: CMakeLists.txt  Net.h  gsNetPoll_g++.cpp  gsNetPoll_g++.h  main.cpp
Network/: CMakeLists.txt  Client.cpp  NetThread.cpp  NetThread.h  Server.cpp
Plugin_API/: CMakeLists.txt  coreapi.cpp  coreapi.h  plugin.h  pluginapi.cpp  pluginapi.h  pluginmanager.cpp  pluginmanager.h  thread.cpp  thread.h
Prueba1/: CMakeLists.txt  plugin1.cpp
Prueba2/: CMakeLists.txt  plugin2.cpp
Prueba_Dummy/: CMakeLists.txt  MDP_Dummy.cpp  main.cpp
Sequencer/: CMakeLists.txt  main.cpp
Shared_memory/: Arm.cpp  Arm.h  CMakeLists.txt  Camera.cpp  Camera.h  Destination.cpp  Destination.h  Kinect.cpp  (+17 more)
Vision_Dulce/: CMakeLists.txt  main.cpp
Vision_Dulce_ejecutable/: CMakeLists.txt  Makefile  NetThread.cpp  classifiers.cpp  classifiers.hpp  cmake_install.cmake  cvtexture_demo.cpp  cvtexture_demo.hpp  datos.csv  inicial.cpp  objects.txt  result.csv  vision_dulce_ejecutable  vlPrueba.cpp
Vision_Dulce_ejecutable/concept1/: params.yml
Vision_Dulce_ejecutable/concept1/classifier1/: ModeloBayes.yml  classifier1.yml  descriptor.yml
Vision_Dulce_ejecutable/concept1/classifier2/: ModeloBayes.yml  classifier2.yml  descriptor.yml
Vision_Dulce_ejecutable/concept1/classifier3/: ModeloBayes.yml  classifier3.yml  descriptor.yml
Vision_Dulce_ejecutable/concept1/classifier4/: ModeloBayes.yml  classifier4.yml  descriptor.yml
Vision_Dulce_ejecutable/concept1/classifier5/: ModeloBayes.yml  classifier5.yml  descriptor.yml
Vision_Dulce_ejecutable/concept1/classifier6/: ModeloBayes.yml  classifier6.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/: params.yml
Vision_Dulce_ejecutable/concept2/classifier1/: ModeloBayes.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/classifier2/: ModeloBayes.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/classifier3/: ModeloBayes.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/classifier4/: ModeloBayes.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/classifier5/: ModeloBayes.yml  descriptor.yml
Vision_Dulce_ejecutable/concept2/classifier6/: ModeloBayes.yml  descriptor.yml
Vision_Faces/: CMakeLists.txt  facedetect.cpp  facedetect.h  imgfeatures.cpp  imgfeatures.h  kdtree.cpp  kdtree.h  learn.cpp  learn.h  load.cpp  load.h  main.cpp  minpq.cpp  minpq.h  recognize.cpp  recognize.h  sift.cpp  sift.h  tratamiento.cpp  tratamiento.h  utils.cpp  utils.h  vision_faces.cpp  xform.cpp  xform.h
Vision_Objects/: CMakeCache.txt  CMakeLists.txt  HC.cpp  HC.hpp  MINE  Makefile  Untitled.rtf  cmake_install.cmake  comparepoint.cpp  comparepoint.h  findobject.cpp  findobject.h  histograma.cpp  histograma.h  imagelocation.cpp  imagelocation.h  imagesimilarity.cpp  imagesimilarity.h  main.cpp  makefile.rtf  matchingsurf.cpp  matchingsurf.h  outVideo_1P_4.avi  point2d.h  recognizer.cpp  recognizer.hpp  toolsimages.cpp  toolsimages.h  vision_objects.cpp
Vision_Surf/: CMakeLists.txt  capture.cpp  main.cpp  surfrecognizer.cpp  surfrecognizer.h  vision_surf.cpp
Voice_Recognition/: CMakeLists.txt  main.cpp  tty-continuous.cpp  tty-continuous.h  voice_recognition.cpp
Voice_Recognition_Server/: CMakeLists.txt  NetThread.cpp  Thread.h  main.cpp
(+143 files in other folders)
